--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <form action="" class="form-creat">
+    <h1>Form User Registration</h1>
     <div>
       <label for="id-first-name">First Name</label>
       <input type="text" placeholder="Enter a First Name" name="username" id="id-first-name">
@@ -54,13 +55,42 @@
     </div>
     <br>
     <div>
-      <label for="idname">Conform Password</label>
-      <input type="" placeholder="Enter a Password" name="username" id="idname">
+      <label for="id-language">Language</label>
+      <input type="checkbox" name="username" id="id-tamil-language">
+      <label for="id-tamil-language">Tamil</label>
+      <input type="checkbox" name="username" id="id-english-language">
+      <label for="id-english-language">English</label>
+      <input type="checkbox" name="username" id="id-others-language">
+      <label for="id-others-language">Others</label>
+    </div>
+    <br>
+    <div>
+      <label for="id-other-language">Other Language</label>
+      <input type="text" placeholder="Enter a Other Language" name="username" id="id-other-language">
+    </div>
+    <br>
+    <div>
+      <label for="id-file">Upload Files</label>
+      <input type="file" name="username" id="id-file">
+    </div>
+    <br>
+    <div>
+      <label for="id-range">Coding Range (1 to 5)</label>
+      <input type="range" name="username" id="id-range">
+    </div>
+    <br>
+    <div>
+      <label for="id-url">LinkedIn URL</label>
+      <input type="url" name="username" id="id-url">
+    </div>
+    <br>
+    <div>
+      <input type="button" value="Submit">
+    </div>
+    <div>
+      <input type="reset" value="Reset">
     </div>
   </form>
-
-
-
 
 
   <script src="./script.js"></script>
