--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     <div class="district-container first-name-container" id="id-district">
       <label for="dist">SELECT YOUR DISTRICT</label>
-      <select name="district" id="id-district">
+      <select name="district" id="id-district" class="class-district">
         <option value="select">Enter Your District</option>
         <option value="Tpr">Tirupur</option>
         <option value="cbe">Coimbatore</option>
